# Master

./: ver1.cpp
instructions/: Trilinos_zoltan2_load_instruction.sh  gklib_load_instruction  gklib_load_instruction.sh  kahip_load_instruction  kahip_load_instruction.sh  kaminpar_load_instruction  kaminpar_load_instruction.sh  metis_load_instruction  metis_load_instruction.sh  parmetis_load_instruction  parmetis_load_instruction.sh  scotch_load_instruction  scotch_load_instruction.sh
project/: CMakeLists.txt  compile.sh  main.cpp
project/CSR/: test
project/Partitions/: testKM  test_KaHIP_p4_FASTMESH_imbalance_5_info  test_KaHIP_p4_ULTRAFASTMESH_imbalance_5_info  test_KaHIP_parts_4_info  test_KaMinPar_p4_create_default_context_imbalance_5_info  test_KaMinPar_p4_create_strong_context_imbalance_5_info  test_KaMinPar_parts_4_info  test_ParMETIS_p4_imbalance_5_info  test_ParMETIS_parts_4_info  test_SCOTCH_p4_SCOTCH_STRATBALANCE_imbalance_5_info  test_SCOTCH_p4_SCOTCH_STRATQUALITY_imbalance_5_info  test_SCOTCH_p4_SCOTCH_STRATSPEED_imbalance_5_info  test_SCOTCH_parts_4_info  test_Zoltan2_Sphynx_p4_combinatorial_jacobi_6_info  test_Zoltan2_Sphynx_p4_combinatorial_muelu_6_info  test_Zoltan2_Sphynx_p4_combinatorial_polynomial_6_info  test_Zoltan2_Sphynx_p4_generalized_jacobi_6_info  test_Zoltan2_Sphynx_p4_generalized_muelu_6_info  test_Zoltan2_Sphynx_p4_generalized_polynomial_6_info  test_Zoltan2_Sphynx_p4_normalized_jacobi_6_info  test_Zoltan2_Sphynx_p4_normalized_muelu_6_info  test_Zoltan2_Sphynx_p4_normalized_polynomial_6_info
project/Save/: CMakeLists.txt
project/converters/: Makefile  csr2amgx.cpp  csr2mtx.cpp  csr_output.h  fast_double_parser.h  mtx2csr.cpp  mtx2csr.h  mtx_input.h  mtx_output.h  mtxcol2mtxvec.cpp
